Fixing home page styles to play nice on mobile

--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -56,5 +56,8 @@
     text-align: right;
     font-size: 13px;
     font-weight: 600;
+    @include mq($from: mobile, $until: tablet){
+      text-align: left;
+    }
   }
 }
